adding reset buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,6 @@ h2 {
   text-transform: uppercase;
   font-family: 'Open Sans', sans-serif;
   font-size: var(--font-size-large);
-  
 }
 
 h2.title {
@@ -64,8 +63,9 @@ button {
   margin: 6px;
   border: 1px solid transparent;
   /* padding: .5rem 1rem; */
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
   color: var(--color-keys);
   font-size: var(--font-size-medium);
   background-color: var(--color-keys-light);
