--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,7 @@ button {
   transition: all .2s ease-in-out;
 }
 
-.disabled {
+.disabled, .disabled:hover {
   background-color: var(--color-lose);
   transform: none;
   transition: none;
