--- a/css/styles.css
+++ b/css/styles.css
@@ -132,12 +132,11 @@ button {
   transition: all .2s ease-in-out;
 }
 
-.disabled, .disabled:hover {
+.disabled {
   background-color: var(--color-lose);
   transform: none;
   transition: none;
 }
-
 
 .chosen {
   background: var(--color-neutral);
